zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -346,6 +346,8 @@
   "death.attack.scythe_ascension.item": "%1$s被%2$s飞腾时用的%3$s斩杀了",
   "death.attack.scythe_combo": "%1$s被%2$s切成两半后又被切成了四份",
   "death.attack.scythe_combo.item": "%1$s被%2$s用%3$s切成两半后又被切成了四份",
+  "death.attack.scythe_maelstrom": "%1$s被%2$s切成了碎丁",
+  "death.attack.scythe_maelstrom.item": "%1$s被%2$s用%3$s切成了碎丁",
   "death.attack.scythe_melee": "%1$s被%2$s切成了两半",
   "death.attack.scythe_melee.item": "%1$s被%2$s用%3$s切成了两半",
   "death.attack.scythe_rebound": "%1$s被%2$s用镰刀回旋镖击杀了",
@@ -642,6 +644,7 @@
   "item.malum.warping_engine": "扭曲引擎",
   "item.malum.weight_of_worlds": "宙界重斧",
   "item.malum.wicked_spirit": "邪恶精魂",
+  "item.malum.wind_nucleus": "疾风凝核",
   "item.malum.zinc_impetus": "锌促符",
   "item.malum.zinc_node": "锌结点",
   "item.malum.ace_prideweave": "无性恋骄傲织物",
@@ -687,9 +690,9 @@
   "malum.effect.curio.full_health_fake_collection": "攻击满生命值目标时触发收获精魂时的效果",
   "malum.effect.curio.growing_gluttony": "食用腐败食物时延长暴食效果持续时间",
   "malum.effect.curio.hunger_drain": "持续消耗饥饿值",
-  "malum.effect.curio.longer_ascension_cooldown": "飞腾魔咒冷却延长",
   "malum.effect.curio.longer_rebound_cooldown": "回旋魔咒冷却延长",
   "malum.effect.curio.low_health_speed": "低生命值时提升速度",
+  "malum.effect.curio.lower_ascension_damage": "飞腾魔咒伤害降低",
   "malum.effect.curio.no_sweep": "禁止镰刀横扫攻击",
   "malum.effect.curio.pacifist_recharge": "使用镰刀后冷却延长",
   "malum.effect.curio.passive_healing": "持续恢复生命值",
@@ -716,26 +719,33 @@
   "malum.effect.edge_of_deliverance_unpowered_attack": "非暴击的攻击造成的伤害较少",
   "malum.effect.erosive_silence": "侵蚀伤害能静默目标",
   "malum.effect.erosive_spread": "散射法术弹拆成的多个侵蚀能量束",
-  "malum.effect.geas.authority_of_greed": "疾病、祝福、诅咒在受伤时暂停",
-  "malum.effect.geas.authority_of_greed_arcane_resonance": "奥术谐振延长暂停时间",
-  "malum.effect.geas.authority_of_wrath": "伤病、情感、知觉与所见者分享",
-  "malum.effect.geas.authority_of_wrath_arcane_resonance": "奥术谐振扩大影响范围",
-  "malum.effect.geas.explosion_absorption": "爆炸变为具有推进功能的狂风",
-  "malum.effect.geas.explosion_absorption_cooldown": "重复触发会禁用效果并消耗耐力",
+  "malum.effect.geas.explosion_eating": "爆炸变为挖掘速度提升",
+  "malum.effect.geas.explosion_mining_cooldown": "风弹需要等待充能",
+  "malum.effect.geas.explosion_mining_exhaustion": "过度使用会禁用效果并消除敏捷提升",
+  "malum.effect.geas.fall_damage_auto_attack": "造成摔落伤害时挥动武器攻击目标",
+  "malum.effect.geas.gleeful_target": "伤病、情感、知觉与所见者分享",
+  "malum.effect.geas.gleeful_target_arcane_resonance": "奥术谐振扩大影响范围",
   "malum.effect.geas.hunger_as_withdrawal": "屠杀成瘾",
+  "malum.effect.geas.inverted_heart": "疾病、祝福、诅咒在受伤时暂停",
+  "malum.effect.geas.inverted_heart_arcane_resonance": "奥术谐振延长暂停时间",
+  "malum.effect.geas.last_stand": "死亡、离逝、终结不再毫无宽恕",
+  "malum.effect.geas.last_stand_patient_death": "死亡终将到来……除非",
   "malum.effect.geas.malignant_crit_healing_overexertion": "重复触发会阻断所有治疗",
   "malum.effect.geas.malignant_crit_leech": "恶念挽魂汲取生命力",
   "malum.effect.geas.malignant_crit_reinforcement": "恶念挽魂增加恶念转化",
   "malum.effect.geas.only_scythe": "普通武器使用时会崩解",
-  "malum.effect.geas.rocket_jumping": "狂风的推进力更强",
+  "malum.effect.geas.rocket_jumping": "风弹的推进力更强",
   "malum.effect.geas.scythe_combo": "镰刀挥砍产生连斩",
   "malum.effect.geas.soul_ward_on_hit": "造成魔法伤害恢复灵魂护盾",
   "malum.effect.geas.staff_autofire": "法杖充能后自动发射",
   "malum.effect.geas.staff_homing": "法术弹射物追踪目标",
+  "malum.effect.geas.wind_charge_exhaustion": "持续触发会禁用效果并坠向地面",
+  "malum.effect.geas.wyrd_reconstruction": "避免死亡并重复触发收集精魂时效果",
+  "malum.effect.geas.wyrd_reconstruction_cooldown": "效果冷却较长且在冷却结束前奥术谐振减半",
   "malum.effect.hex_bolts": "发射锐利的忆念能量束",
   "malum.effect.negative": "-%s",
   "malum.effect.positive": "+%s",
-  "malum.effect.soul_based_damage": "造成灵魂魔法伤害",
+  "malum.effect.soul_based_damage": "造成割裂灵魂的伤害",
   "malum.effect.sundering_anchor_chaos_curse": "每次斩击都给予混沌诅咒",
   "malum.effect.sundering_anchor_damage_split": "伤害平均分配至各斩击",
   "malum.effect.unwinding_chaos_burn": "造成燃烧伤害可增强齐射",
@@ -774,13 +784,16 @@
   "malum.gui.geas.bond_of_beloved_chains.tooltip": "",
   "malum.gui.geas.bond_of_deaths_seekers": "死神捕手盟约",
   "malum.gui.geas.bond_of_deaths_seekers.tooltip": "",
+  "malum.gui.geas.creed_of_the_blight_eater": "食枯徒信条",
+  "malum.gui.geas.creed_of_the_blight_eater.tooltip": "嗯……腐枯……真美味……",
   "malum.gui.geas.day_effect": "在日间时：",
   "malum.gui.geas.night_effect": "在夜间时：",
   "malum.gui.geas.oath_of_the_gleeful_target": "欢愉目标誓约",
-  "malum.gui.geas.oath_of_the_gleeful_target.tooltip": "强欲之魔女因子",
+  "malum.gui.geas.oath_of_the_gleeful_target.tooltip": "世上内心最满足的存在",
   "malum.gui.geas.oath_of_the_inverted_heart": "逆反之心誓约",
-  "malum.gui.geas.oath_of_the_inverted_heart.tooltip": "愤怒之魔女因子",
+  "malum.gui.geas.oath_of_the_inverted_heart.tooltip": "",
   "malum.gui.geas.oath_of_the_last_stand": "绝地一搏誓约",
+  "malum.gui.geas.oath_of_the_last_stand.tooltip": "",
   "malum.gui.geas.oath_of_the_overeager_fist": "热切重拳誓约",
   "malum.gui.geas.oath_of_the_overeager_fist.tooltip": "",
   "malum.gui.geas.oath_of_the_overkeen_eye": "敏锐神眼誓约",
@@ -791,11 +804,14 @@
   "malum.gui.geas.oath_of_unsighted_resistance.tooltip": "",
   "malum.gui.geas.pact_of_reciprocation": "反照条约",
   "malum.gui.geas.pact_of_reciprocation.tooltip": "",
-  "malum.gui.geas.pact_of_the_absorbent": "息爆条约",
+  "malum.gui.geas.pact_of_the_cloudhopper": "云跃者条约",
+  "malum.gui.geas.pact_of_the_cloudhopper.tooltip": "",
   "malum.gui.geas.pact_of_the_dayblessed": "日祝者条约",
   "malum.gui.geas.pact_of_the_dayblessed.tooltip": "",
   "malum.gui.geas.pact_of_the_fortress": "垒塞条约",
   "malum.gui.geas.pact_of_the_fortress.tooltip": "",
+  "malum.gui.geas.pact_of_the_maverick": "独行侠条约",
+  "malum.gui.geas.pact_of_the_maverick.tooltip": "",
   "malum.gui.geas.pact_of_the_nightchild": "夜育者条约",
   "malum.gui.geas.pact_of_the_nightchild.tooltip": "",
   "malum.gui.geas.pact_of_the_profane_ascetic": "腐烂苦修条约",
@@ -811,7 +827,9 @@
   "malum.gui.geas.pact_of_the_skybreaker": "裂天者条约",
   "malum.gui.geas.pact_of_the_skybreaker.tooltip": "",
   "malum.gui.geas.pact_of_wyrd_reconstruction": "命运重构条约",
+  "malum.gui.geas.pact_of_wyrd_reconstruction.tooltip": "",
   "malum.gui.geas.sworn": "宣誓后：",
+  "malum.gui.geas.the_last_curse": "The Last Curse",
   "malum.gui.rite.aerial_rite": "运动仪式",
   "malum.gui.rite.aqueous_rite": "忠诚仪式",
   "malum.gui.rite.arcane_rite": "无向仪式",
@@ -1075,6 +1093,7 @@
   "malum.subtitle.spirit_diode_open": "精魂二极管：开启",
   "malum.subtitle.spirit_diode_place": "方块：被放置",
   "malum.subtitle.spirit_diode_step": "脚步声",
+  "malum.subtitle.spirit_diode_tick": "精魂二极管：咔哒",
   "malum.subtitle.spirit_engraved": "精魂：铭刻",
   "malum.subtitle.spirit_mote_created": "精魂聚块：制造",
   "malum.subtitle.spirit_picked_up": "精魂：被捡拾",
@@ -1239,14 +1258,16 @@
   "malum.gui.book.entry.esoteric_reaping.description": "残漏的魔法",
   "malum.gui.book.entry.page.headline.esoteric_reaping": "隐秘收割",
   "malum.gui.book.entry.page.text.esoteric_reaping.1": "生物死亡时，其灵魂便会消散。 这是个基础理论，且迄今已有大 量实例证明其正确。也有说法认 为，偶尔这种能量会在生物死亡 时残留于其形体，如此就能解释 它们掉落反应物的现象了。但这 一说法仍未被证明。",
-  "malum.gui.book.entry.page.text.esoteric_reaping.2": "但如今，有手中镰刀的协助，证 明这点非常容易。灵魂破碎时， 其能量会与残存的形体碰撞，哪 怕两者接触时间极为短暂也是如 此。这一现象似乎会催动强大的 反应，并导致某种变化的发生。",
-  "malum.gui.book.entry.page.text.esoteric_reaping.3": "我已发现四种由此过程诞生的反 应物，会在下文详细记述。总括 一下，僵尸之肉凝结为腐朽精华， 骷髅之骨晶化为阴冷骨石，幻翼 之翅绕转为星灵织物，末影人之 魔法固化为扭曲能流。",
+  "malum.gui.book.entry.page.text.esoteric_reaping.2": "但如今，有手中镰刀的协助，证 明这点非常容易。灵魂破碎时， 其能量会与残存的形体躯壳碰撞， 哪怕两者接触时间极为短暂也是 如此。这种碰撞能制造出全新的 反应物，只是普通地摧毁形体无 法产出。这一现象似乎会催动强 大的反应，并导致某种变化的发 生。",
+  "malum.gui.book.entry.page.text.esoteric_reaping.3": "我已发现五种由此过程诞生的反 应物，会在下文详细记述。总括 一下，僵尸之肉凝结为腐朽精华， 骷髅之骨晶化为阴冷骨石，幻翼 之翅绕转为星灵织物，旋风人之 精华延续为疾风凝核，末影人之 魔法固化为扭曲能流。",
   "malum.gui.book.entry.page.headline.esoteric_reaping.rotting_essence": "腐朽精华",
   "malum.gui.book.entry.page.text.esoteric_reaping.rotting_essence.1": "在这种魔法的作用下，亡灵的血 肉会凝结为腐朽精华。这是一种 剧毒且污秽的物质，散发着死亡 的气息。",
   "malum.gui.book.entry.page.headline.esoteric_reaping.grim_talc": "阴冷骨石",
   "malum.gui.book.entry.page.text.esoteric_reaping.grim_talc.1": "受此魔法影响，骨头会晶化为阴 冷骨石。这是一种用途较多的矿 物质，且也可捣碎为骨粉。",
   "malum.gui.book.entry.page.headline.esoteric_reaping.astral_weave": "星灵织物",
   "malum.gui.book.entry.page.text.esoteric_reaping.astral_weave.1": "幻翼的翅膜会因这种魔法而绕转 为星灵织物。这是一种神秘的布 匹，具有奇异的奥术性质。",
+  "malum.gui.book.entry.page.headline.esoteric_reaping.wind_nucleus": "疾风凝核",
+  "malum.gui.book.entry.page.text.esoteric_reaping.wind_nucleus.1": "旋风人的精华不会受到损伤，其 核心会保留为疾风凝核。其中存 储的能量能够快速释放，以推开 周围的生物。",
   "malum.gui.book.entry.page.headline.esoteric_reaping.warp_flux": "扭曲能流",
   "malum.gui.book.entry.page.text.esoteric_reaping.warp_flux.1": "包裹着末影人的魔法固结为扭曲 能流。这是一种奇怪的精华，似 乎具有扭曲自然法则的能力。",
 
@@ -1374,13 +1395,13 @@
   "malum.gui.book.entry.necklace_of_the_narrow_edge.ring_of_the_rising_edge.description": "A键只有按与不按",
   "malum.gui.book.entry.page.headline.necklace_of_the_narrow_edge.ring_of_the_rising_edge": "升腾锋刃",
   "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.1": "飞腾魔咒能让我凭借镰刃挥出的 风飞起，其中也很明显存在某种 协同魔法。气生生不息，若是引 入简单的结构阵列更改气流方向， 就能修改飞腾魔咒的效果，我称 之为“升腾锋刃”。",
-  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.2": "此戒指除去能让镰刀伤害升高、 冷却延长外，被刃风击中的事物 还会向上飞起。很适合群体控制 之类的东西，但和镰刀本身的效 果一样，精准镰刃也会更改它的 功效。",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.2": "在降低镰刀伤害的代价外，被刃 风击中的事物还会向上飞起。很 适合群体控制之类的东西，但和 镰刀本身的效果一样，精准镰刃 也会更改它的功效。",
   "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.3": "同时佩戴精准镰刃项链和升腾锋 刃戒指时，汇集的挥砍刃风能以 极大力度击飞事物，可借此将敌 人抛过头顶。",
   "malum.gui.book.entry.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom": "怒啸涡流戒指",
   "malum.gui.book.entry.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.description": "裂风",
   "malum.gui.book.entry.page.headline.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom": "怒啸涡流",
-  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.1": "回旋魔咒能让镰刀变成强大的远 程武器，它也和飞腾魔咒一样， 与澄空奥术能量关联紧密。其制 造过程与升腾锋刃戒指一致，不 过还需引入精炼过的灵魂石，灌 注的对象也有所不同。",
-  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.2": "在增加伤害和大幅延长冷却之 外，回旋魔咒发射的弹射物还会 在其周围产生强大的风气涡流， 以此对附近较大半径范围内所有 事物不断造成伤害。",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.1": "回旋魔咒能让镰刀变成强大的远 程武器，它也和飞腾魔咒一样， 与澄空奥术能量关联紧密。这枚 戒指同样会为回旋引入附加功能， 我称之为“怒啸涡流”。",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.2": "在大幅延长冷却的代价之外，回 旋魔咒发射的弹射物还会在其周 围产生强大的风气涡流，以此对 附近较大半径范围内所有事物不 断造成伤害。",
   "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_howling_maelstrom.3": "同时佩戴精准镰刃项链和怒啸涡 流戒指时，风气涡流在镰刀命中 前便不会显露出来，击中后则会 在命中处停留大约两秒。",
 
   "malum.gui.book.entry.belt_of_the_prospector": "勘探腰带",
@@ -1502,8 +1523,8 @@
   "malum.gui.book.entry.arcane_restoration.tool_repair": "修复工具",
   "malum.gui.book.entry.arcane_restoration.tool_repair.description": "钢铁的修复",
   "malum.gui.book.entry.page.headline.arcane_restoration.tool_repair": "修复工具",
-  "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.1": "",
-  "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.2": "",
+  "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.1": "修复基柱并不只能修复促符。提 供适合需修复工具和盔甲的修复 材料，喂点精魂，再将工具放到 附近的物品台上，即可无需经验 修复物品。每次修复会补回物品 总耐久度的50%。",
+  "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.2": "灵灾的装备在修复时更加高效和 酷炫，补回的量为75%，而非标 准的50%。",
 
 
   "malum.gui.book.entry.mote_making": "奥能聚块的制作",
@@ -1524,6 +1545,26 @@
   "malum.gui.book.entry.page.text.crucible_augmentation.1": "精魂坩埚具有深厚的潜能，但大 部分都没能发挥出来。炼金矿尘 制成的各种核心就能激发出它的 潜能，我将这种过程称作“增 强”。",
   "malum.gui.book.entry.page.text.crucible_augmentation.2": "每种增强件都有独特效果，放入 精魂催化器，或在精魂坩埚中放 最多四个即可生效。使用多个同 种增强件即可叠加效果。",
   "malum.gui.book.entry.page.text.crucible_augmentation.3": "为方便增强过程的实操，我特地 改造了一件音叉。手持调谐音叉 就可查看独属坩埚的回响和其上 的各增强件。不仅如此，对坩埚 使用调谐音叉时，还可选择一种 属性进行提升，但同时其他属性 会略有下降。",
+
+  "malum.gui.book.entry.sympathy_drive": "谐和驱动器",
+  "malum.gui.book.entry.sympathy_drive.description": "",
+  "malum.gui.book.entry.page.headline.sympathy_drive": "谐和驱动器",
+  "malum.gui.book.entry.page.text.sympathy_drive.1": "When the impetus takes damage, the drive remembers it. When the impetus is healed via mending diffuser, the stored charge is converted into an increase to healing received and a percentage buff to all stats lasting for the next 3 focusing cycles",
+
+  "malum.gui.book.entry.caustic_catalyst": "苛性催化器",
+  "malum.gui.book.entry.caustic_catalyst.description": "",
+  "malum.gui.book.entry.page.headline.caustic_catalyst": "苛性催化器",
+  "malum.gui.book.entry.page.text.caustic_catalyst.1": "Tuning Potency is increased proportionally to instability",
+
+  "malum.gui.book.entry.resonance_tuner": "谐振调谐器",
+  "malum.gui.book.entry.resonance_tuner.description": "",
+  "malum.gui.book.entry.page.headline.resonance_tuner": "谐振调谐器",
+  "malum.gui.book.entry.page.text.resonance_tuner.1": "For each percentage of instability, uses up 2% of your focusing speed to apply a 1% decrease to the total instability. That focusing speed reduction is actually multiplied by 0.8 as to not drain ur focusing speed completely in some situations, but it's still as effective as if not multiplied by 0.8",
+
+  "malum.gui.book.entry.suspicious_device": "可疑装置",
+  "malum.gui.book.entry.suspicious_device.description": "",
+  "malum.gui.book.entry.page.headline.suspicious_device": "可疑装置",
+  "malum.gui.book.entry.page.text.suspicious_device.1": "Blows up. This entry is more of a joke, the whole item is, the author made a silly gizmo and warns anyone to not create it. The gizmo also creates blight in the area upon detonation.",
 
   "malum.gui.book.entry.mending_diffuser": "修补弥散器",
   "malum.gui.book.entry.mending_diffuser.description": "已死的疤痕组织",
@@ -1822,7 +1863,7 @@
   "malum.gui.book.entry.rune_of_reinforcement": "灵固符文",
   "malum.gui.book.entry.rune_of_reinforcement.description": "促进制造的脉动",
   "malum.gui.book.entry.page.headline.rune_of_reinforcement": "灵固符文",
-  "malum.gui.book.entry.page.text.rune_of_reinforcement.1": "灵固符文不会促进形体的能力， 而只是向其奥术存在施加压力， 增加灵魂护盾的容量和效力。",
+  "malum.gui.book.entry.page.text.rune_of_reinforcement.1": "灵固符文不会促进形体的能力， 而只是向其奥术存在施加压力， 增加灵魂护盾的容量和稳固度。",
 
   "malum.gui.book.entry.rune_of_volatile_distortion": "扭曲无常符文",
   "malum.gui.book.entry.rune_of_volatile_distortion.description": "促进腐化的脉动",
@@ -1868,7 +1909,7 @@
   "malum.gui.book.entry.tyrving": "提尔锋",
   "malum.gui.book.entry.tyrving.description": "远古遗物",
   "malum.gui.book.entry.page.headline.tyrving": "提尔锋",
-  "malum.gui.book.entry.page.text.tyrving.1": "提尔锋是一把相对隐秘的武器。 它奇异的构造让它看上去好像是 不适合战斗的孱弱武器。然而， 其咒灰内衬和扭曲石外形则使其 能对灵魂造成额外魔法伤害，灵 魂越强大，增益就越多。",
+  "malum.gui.book.entry.page.text.tyrving.1": "提尔锋的设计古怪，看上去好像 是不适合战斗的孱弱武器。其内 衬为咒灰，外形则由扭曲石构成， 也正是这两者使其能根据目标灵 魂的复杂程度造成正比的额外 魔法伤害。灵魂越强大，增益就 越多。",
   "malum.gui.book.entry.page.text.tyrving.2": "此武器也可用奥术复原高效修 复。",
 
   "malum.gui.book.entry.the_device": "神秘装置",
@@ -2118,6 +2159,26 @@
   "malum.gui.book.entry.void.rune_of_unnatural_stamina.description": "逃离追寻之物",
   "malum.gui.book.entry.page.headline.void.rune_of_unnatural_stamina": "反常耐力符文",
   "malum.gui.book.entry.page.text.void.rune_of_unnatural_stamina.1": "反常耐力符文给予佩戴者歇斯底 里般的速度，他们将永远能疾速 运动，甚至在饥饿值低到无法疾 跑时仍能疾跑。",
+
+  "malum.gui.book.entry.void.fused_consciousness": "融合意识",
+  "malum.gui.book.entry.void.fused_consciousness.description": "过去与未来一切的蓝图",
+  "malum.gui.book.entry.page.headline.void.fused_consciousness": "融合意识",
+  "malum.gui.book.entry.page.text.void.fused_consciousness.1": "The Future Holds Many Secrets... But you may look at some of them early.\n Create the anomalous design by throwing an iron block into the well. Throw the complete design into the well for the fused consciousness.",
+
+  "malum.gui.book.entry.void.sundering_anchor": "裂斩锚刃",
+  "malum.gui.book.entry.void.sundering_anchor.description": "",
+  "malum.gui.book.entry.page.headline.void.sundering_anchor": "裂斩锚刃",
+  "malum.gui.book.entry.page.text.void.sundering_anchor.1": "Slashes Enemies Several Times with each hit. Applies Hatred each time, which forces malignant conversion and stacks up quickly. Right click for a cool ranged chain slash attack type deal",
+
+  "malum.gui.book.entry.void.unwinding_chaos": "混沌四侵",
+  "malum.gui.book.entry.void.unwinding_chaos.description": "",
+  "malum.gui.book.entry.page.headline.void.unwinding_chaos": "混沌四侵",
+  "malum.gui.book.entry.page.text.void.unwinding_chaos.1": "Blasts enemies with composite energy. Charge to fire a horizontal volley. Applies burn with damage. Burn damage or kills against burning enemies incrementally overcharge the volley, doubling projectile count.",
+
+  "malum.gui.book.entry.void.belt_of_the_limitless": "界限无存腰带",
+  "malum.gui.book.entry.void.belt_of_the_limitless.description": "",
+  "malum.gui.book.entry.page.headline.void.belt_of_the_limitless": "界限无存腰带",
+  "malum.gui.book.entry.page.text.void.belt_of_the_limitless.1": "Doubles Soul Ward Capacity, Soul Ward now absorbs *all* damage. Soul Ward Integrity scales double as soul ward approaches disintigration. Reduces Soul Ward Recovery Speed Slightly.",
 
 
   "malum.gui.book.entry.a_personal_note": "个人手记",
